# Demo

./: CMakeLists.txt  main.cpp
bussiness/: bussinessproc.h
common/: glo_def.h
conf/: kaohe_chess.ini  log.conf
configset/: configdef.h  iniconfig.cpp  iniconfig.h
dispatchmsgserver/: dispatchmsgserver.cpp  dispatchmsgserver.h
events/: events.cpp  events.h  eventtype.cpp  eventtype.h  ievent.h  playingchess.h
handlers/: chess_handler.cpp  chess_handler.h  handlers.cpp  handlers.h  ihandlers.h  userver.h
libs/iniparser/: libiniparser.so.1
libs/log4cpp/: liblog4cpp.la  liblog4cpp.so.5.0.6
mysqlconn/: sqlconnection.h  sqlrecords.h  sqltable.h
networkinterface/: networkinterface.cpp  networkinterface.h  session.h
protodir/: chess.pb.cpp  chess.pb.cpp.bak  chess.pb.h  chess.proto  compile.txt
test/: test.cpp  test.h
threadpool/: thread.h  thread_pool.cpp  thread_pool.h
